# BlameEngine

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GETTING_STARTED.md  README.md
engine/boundary/: CMakeLists.txt
engine/boundary/include/next/boundary/: datagram_transport.h  render_clock.h  snapshot.h  snapshot_codec.h  snapshot_publisher.h  snapshot_receiver.h  spsc_ring.h  transport.h  triple_buffer.h  udp_datagram.h
engine/boundary/src/: datagram_transport.cpp  snapshot_codec.cpp  snapshot_publisher.cpp  snapshot_receiver.cpp  udp_datagram.cpp
engine/compression/: CMakeLists.txt
engine/compression/include/next/compression/: compression.h
engine/compression/src/: compression.cpp
engine/gameapi/: CMakeLists.txt
engine/gameapi/include/next/gameapi/: abi.h  abi_dispatch.h  capability.h  components.h  intent.h  (+5 more)
engine/gameapi/src/: abi_dispatch.cpp  game_api.cpp  intent_resolver.cpp
engine/gameplay/: CMakeLists.txt
engine/gameplay/src/: actuation_system.cpp  physics_world_query.cpp
engine/jobsystem/: CMakeLists.txt
engine/jobsystem/src/: job_system.cpp
engine/level/: CMakeLists.txt
engine/level/src/: level_builder.cpp  level_loader.cpp  level_validator.cpp  win_conditions.cpp
engine/physics/: CMakeLists.txt
engine/physics/src/: jolt_physics_world.cpp  physics_system.cpp  reference_physics_world.cpp
engine/platform/: CMakeLists.txt
engine/platform/src/: platform.cpp
engine/profiler/: CMakeLists.txt
engine/renderer/: CMakeLists.txt
engine/renderer/shaders/metal/: demo_forward.metal  demo_forward.shader_manifest
engine/renderer/src/: renderer.cpp
engine/renderer/src/dx12/: dx12_renderer.cpp
engine/renderer/src/metal/: metal_command.h  metal_command.mm  metal_conversions.h  metal_conversions.mm  metal_device.h  metal_device.mm  metal_frame_graph.h  metal_gpu_resource.h  metal_gpu_resource.mm  metal_pipeline.h  metal_pipeline.mm  metal_release_queue.h  metal_release_queue.mm  metal_render_pass.h  metal_render_pass.mm  metal_renderer.mm  metal_resource.h  metal_resource.mm  metal_resource_pool.h  metal_resource_pool.mm  metal_shader_library.h  metal_shader_library.mm  metal_swapchain.h  metal_swapchain.mm  metal_upload_queue.h  metal_upload_queue.mm
engine/rhi/: CMakeLists.txt
engine/rhi/src/: rhi.cpp
engine/runtime/: CMakeLists.txt
engine/runtime/asset/: CMakeLists.txt
engine/runtime/asset/src/: asset_manager.cpp  asset_types.cpp  package_container.cpp
engine/runtime/src/: world.cpp
engine/sandbox/: CMakeLists.txt
engine/sandbox/src/: bytecode.cpp  gameapi_gateway.cpp  ref_vm.cpp  wasm_meter.cpp  wasm_sandbox.cpp
engine/vegetation/: CMakeLists.txt
engine/vegetation/src/: vegetation_builder.cpp  vegetation_cell.cpp  vegetation_scatter.cpp  vegetation_validator.cpp
engine/vegetation_world/: CMakeLists.txt
engine/vegetation_world/src/: vegetation_cook.cpp  vegetation_query.cpp  vegetation_store.cpp  vegetation_streaming_system.cpp  vegetation_view.cpp
engine/water/: CMakeLists.txt
engine/water/src/: buoyancy.cpp  water_builder.cpp  water_cell.cpp  water_spectrum.cpp  water_surface.cpp  water_validator.cpp  water_volume.cpp
engine/water_world/: CMakeLists.txt
engine/water_world/src/: water_cook.cpp  water_force_system.cpp  water_hazard.cpp  water_query.cpp  water_store.cpp  water_streaming_system.cpp  water_swim.cpp  water_view.cpp
game/hackops/: CMakeLists.txt
game/hackops/src/: main.cpp
game/song/: CMakeLists.txt
game/song/include/song/: game.h
game/song/src/: game.cpp  main.cpp
tests/: CMakeLists.txt
tests/boundary/: test_boundary.cpp  test_boundary_concurrency.cpp  test_boundary_reliability.cpp  test_boundary_transport.cpp  test_boundary_udp.cpp
tests/foundation/: test_logger.cpp
tests/gameapi/: test_game_api.cpp
tests/gameplay/: test_actuation.cpp
tests/integration/: test_jolt_physics_slice.cpp  test_physics_slice.cpp  test_vertical_slice.cpp
tests/jobsystem/: test_job_system.cpp
tests/level/: test_level_loader.cpp  test_level_slice.cpp  test_level_validator.cpp  test_level_win_conditions.cpp
tests/math/: test_math.cpp
tests/physics/: test_jolt_physics.cpp  test_physics.cpp
tests/platform/: test_window.cpp
tests/renderer/: test_metal_command.mm  test_metal_conversions.mm  test_metal_device.mm  test_metal_gpu_resource.mm  test_metal_pipeline.mm  test_metal_release_queue.mm  test_metal_render_pass.mm  test_metal_resource_pool.mm  test_metal_sampler_cache.mm  test_metal_scene_resources.mm  test_metal_shader_library.mm  test_metal_swapchain.mm  test_metal_upload_queue.mm  test_renderer_api.cpp
tests/rhi/: test_rhi_types.cpp
tests/runtime/: test_asset_integration.cpp  test_command_buffer.cpp  test_component.cpp  test_world.cpp
tests/sandbox/: test_ref_vm.cpp  test_sandbox_boundary.cpp  test_sandbox_security.cpp  test_wasm_sandbox.cpp
tests/serialization/: test_serialization.cpp
tests/tools/: test_asset_compiler.cpp
tests/vegetation/: test_vegetation.cpp  test_vegetation_terrain.cpp
tests/vegetation_world/: test_vegetation_cook.cpp  test_vegetation_fuzz.cpp  test_vegetation_query.cpp  test_vegetation_scale.cpp  test_vegetation_slice.cpp  test_vegetation_store.cpp  test_vegetation_streaming.cpp  test_vegetation_streaming_system.cpp  test_vegetation_view.cpp
tests/water/: test_water.cpp
tests/water_world/: test_water_actuation.cpp  test_water_buoyancy.cpp  test_water_buoyancy_jolt.cpp  test_water_cook.cpp  test_water_fuzz.cpp  test_water_hazard.cpp  test_water_query.cpp  test_water_render.cpp  test_water_replay.cpp  test_water_scale.cpp  test_water_slice.cpp  test_water_store.cpp  test_water_streaming.cpp  test_water_swim.cpp  test_water_view.cpp
tests/world/: test_interest_manager.cpp  test_layered_cell_file.cpp  test_streaming_manager.cpp
tools/compression_probe/: CMakeLists.txt
tools/compression_probe/src/: main.cpp
tools/nvim_surface_cpp_probe/: CMakeLists.txt
tools/sandbox_audit/: CMakeLists.txt
tools/sandbox_audit/src/: main.cpp
tools/wasm_demo/: CMakeLists.txt
tools/wasm_demo/src/: main.cpp
(+202 files in other folders)
